# arms-ai-backend

./: .dockerignore  .env.docker  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  identity.py  logging.py  state_machine.py  time.py
app/models/: __init__.py  audit_result.py  order.py  order_event.py  order_file.py  processing_job.py  task_outbox.py  user.py
app/repositories/: base_repository.py  event_repository.py  order_repository.py
app/schemas/: __init__.py  audit.py  event.py  order.py  user.py
app/services/: audit_service.py  correction_service.py  dispatcher.py  event_service.py  order_service.py  pdf_service.py  routing_service.py
app/skills/: SCHEMA.md  registry.py
app/workers/: celery_app.py  tasks.py
docs/adr/: 0001-extraction-layer-not-unstract-platform.md
docs/specs/: p1-audit-integrity-and-sse-hardening.md
migrations/: env.py
migrations/versions/: 001_initial.py  3de333461222_add_task_outbox.py  4_p0_add_processing_job_version.py  5_p0_human_correction_and_confirm.py  6_p1_audit_run_versioning.py  6_p2_arms_audit_result.py
tests/: conftest.py
tests/acceptance/: test_admin_permissions.py  test_ai_idempotency.py  test_arms_audit_result.py  test_audit_run_versioning.py  test_batch_confirm.py  test_clear_data.py  test_contract.py  test_cross_user.py  test_deterministic_rules.py  test_e2e.py  test_enqueue.py  test_filter_cert_type.py  test_filter_date_range.py  test_human_correction.py  test_identity_isolation.py  test_multi_pdf.py  test_order_idempotency.py  test_pdf_content_versioning.py  test_pdf_errors.py  test_pre_rules_hardening.py  test_result_api.py  test_search_multifield.py  test_skill_strict.py  test_sse.py  test_sse_runtime.py  test_state_machine_e2e.py
tests/integration/: test_health.py
tests/security/: test_dns_pinning.py  (+3 more)
(+30 files in other folders)
